[gd_scene load_steps=14 format=3 uid="uid://7oq8rdksswhi"]

[ext_resource type="Script" path="res://topics/ui/side_panel/side_panel.gd" id="1_hcmu3"]
[ext_resource type="Theme" uid="uid://ch47gokw4nkj3" path="res://misc/theme.tres" id="2_xsdfw"]
[ext_resource type="Script" path="res://topics/ui/side_panel/scripts/container_code.gd" id="3_6y0ia"]
[ext_resource type="FontFile" uid="uid://ce6y5gjob4a57" path="res://misc/fonts/ProggyVector-Regular.otf" id="3_k2xbj"]
[ext_resource type="Script" path="res://topics/ui/side_panel/scripts/minimum_size_to_fit_text.gd" id="4_8mx63"]
[ext_resource type="Script" path="res://topics/ui/scripts/linepainter.gd" id="4_jkr46"]
[ext_resource type="Texture2D" uid="uid://crds5yinbpcso" path="res://misc/icons/caret_left.png" id="6_spu0b"]
[ext_resource type="Script" path="res://topics/ui/side_panel/scripts/container_variables.gd" id="6_ul532"]
[ext_resource type="Script" path="res://topics/ui/side_panel/scripts/container_callstack.gd" id="7_kg1yt"]
[ext_resource type="Script" path="res://topics/ui/side_panel/scripts/button_toggle_side_panel.gd" id="7_puxd5"]
[ext_resource type="Script" path="res://topics/ui/side_panel/scripts/container_explanation.gd" id="7_sbto6"]
[ext_resource type="Texture2D" uid="uid://cd1kgsf44p4d6" path="res://misc/icons/info.png" id="9_mct2w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rw0g"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="side_panel" type="Panel" node_paths=PackedStringArray("button_toggle", "cont_code", "cont_var", "cont_call", "cont_exp")]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -562.0
offset_top = 58.0
offset_bottom = -26.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_xsdfw")
script = ExtResource("1_hcmu3")
is_open = true
button_toggle = NodePath("button_toggle_side_panel")
cont_code = NodePath("content/container_code")
cont_var = NodePath("content/container_variables")
cont_call = NodePath("content/container_callstack")
cont_exp = NodePath("content/container_info")

[node name="content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xsdfw")

[node name="container_code" type="MarginContainer" parent="content" node_paths=PackedStringArray("code_displayer_holder", "code_display", "label_call", "label_return")]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_xsdfw")
script = ExtResource("3_6y0ia")
code_displayer_holder = NodePath("content/MarginContainer")
code_display = NodePath("content/MarginContainer/ScrollContainer/code_display")
label_call = NodePath("content/title/label_call")
label_return = NodePath("content/Panel/MarginContainer/label_return")

[node name="content" type="VBoxContainer" parent="content/container_code"]
layout_mode = 2
theme = ExtResource("2_xsdfw")

[node name="title" type="VBoxContainer" parent="content/container_code/content"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_xsdfw")

[node name="HSeparator" type="HSeparator" parent="content/container_code/content/title"]
layout_mode = 2
theme = ExtResource("2_xsdfw")

[node name="label_call" type="Label" parent="content/container_code/content/title"]
layout_mode = 2
theme = ExtResource("2_xsdfw")
text = "Tiefensuche (Aufruf x)"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="content/container_code/content/title"]
layout_mode = 2
theme = ExtResource("2_xsdfw")

[node name="MarginContainer" type="MarginContainer" parent="content/container_code/content" node_paths=PackedStringArray("rich_text_label")]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_xsdfw")
script = ExtResource("4_8mx63")
rich_text_label = NodePath("ScrollContainer/code_display")

[node name="ScrollContainer" type="ScrollContainer" parent="content/container_code/content/MarginContainer"]
layout_mode = 2

[node name="code_display" type="RichTextLabel" parent="content/container_code/content/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_xsdfw")
theme_override_fonts/bold_font = ExtResource("3_k2xbj")
bbcode_enabled = true
text = "DFS_PSEUDOCODE"
fit_content = true
script = ExtResource("4_jkr46")

[node name="Panel" type="Panel" parent="content/container_code/content"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("2_xsdfw")

[node name="MarginContainer" type="MarginContainer" parent="content/container_code/content/Panel"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
offset_right = 16.0
offset_bottom = 18.0
theme = ExtResource("2_xsdfw")

[node name="label_return" type="Label" parent="content/container_code/content/Panel/MarginContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("2_xsdfw")
text = "Tiefensuche (Aufruf x)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="container_variables" type="MarginContainer" parent="content" node_paths=PackedStringArray("variables_holder")]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
theme = ExtResource("2_xsdfw")
script = ExtResource("6_ul532")
variables_holder = NodePath("content/ScrollContainer/variables_holder")

[node name="content" type="VBoxContainer" parent="content/container_variables"]
layout_mode = 2

[node name="title" type="VBoxContainer" parent="content/container_variables/content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="content/container_variables/content/title"]
layout_mode = 2
theme = ExtResource("2_xsdfw")

[node name="Variables" type="Label" parent="content/container_variables/content/title"]
layout_mode = 2
text = "VARIABLES"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="content/container_variables/content/title"]
layout_mode = 2
theme = ExtResource("2_xsdfw")

[node name="ScrollContainer" type="ScrollContainer" parent="content/container_variables/content"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="variables_holder" type="VBoxContainer" parent="content/container_variables/content/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="container_callstack" type="MarginContainer" parent="content" node_paths=PackedStringArray("call_stack")]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_xsdfw")
script = ExtResource("7_kg1yt")
call_stack = NodePath("content/MarginContainer/content/ScrollContainer/call_stack")

[node name="content" type="VBoxContainer" parent="content/container_callstack"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66

[node name="title" type="VBoxContainer" parent="content/container_callstack/content"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="content/container_callstack/content/title"]
layout_mode = 2
theme = ExtResource("2_xsdfw")

[node name="stack" type="Label" parent="content/container_callstack/content/title"]
layout_mode = 2
text = "STACK"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="content/container_callstack/content/title"]
layout_mode = 2
theme = ExtResource("2_xsdfw")

[node name="MarginContainer" type="MarginContainer" parent="content/container_callstack/content"]
layout_mode = 2
size_flags_vertical = 3

[node name="content" type="Panel" parent="content/container_callstack/content/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_xsdfw")

[node name="ScrollContainer" type="ScrollContainer" parent="content/container_callstack/content/MarginContainer/content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.66

[node name="call_stack" type="VBoxContainer" parent="content/container_callstack/content/MarginContainer/content/ScrollContainer"]
light_mask = 17
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="container_info" type="MarginContainer" parent="content" node_paths=PackedStringArray("exp_display")]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_xsdfw")
script = ExtResource("7_sbto6")
exp_display = NodePath("content/ScrollContainer/rich_text")

[node name="content" type="VBoxContainer" parent="content/container_info"]
layout_mode = 2

[node name="title" type="VBoxContainer" parent="content/container_info/content"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="content/container_info/content/title"]
layout_mode = 2
theme = ExtResource("2_xsdfw")

[node name="TextureRect" type="TextureRect" parent="content/container_info/content/title"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("9_mct2w")
expand_mode = 1
stretch_mode = 4

[node name="HSeparator2" type="HSeparator" parent="content/container_info/content/title"]
layout_mode = 2
theme = ExtResource("2_xsdfw")

[node name="ScrollContainer" type="ScrollContainer" parent="content/container_info/content"]
layout_mode = 2
size_flags_vertical = 3

[node name="rich_text" type="RichTextLabel" parent="content/container_info/content/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "explanation..."
fit_content = true
script = ExtResource("4_jkr46")

[node name="button_toggle_side_panel" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -22.5
offset_bottom = 22.5
grow_vertical = 2
pivot_offset = Vector2(10.5, 22.5)
theme = ExtResource("2_xsdfw")
theme_override_styles/focus = SubResource("StyleBoxFlat_7rw0g")
flat = true
script = ExtResource("7_puxd5")

[node name="icon" type="TextureRect" parent="button_toggle_side_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_spu0b")
expand_mode = 1

[connection signal="mouse_entered" from="button_toggle_side_panel" to="button_toggle_side_panel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="button_toggle_side_panel" to="button_toggle_side_panel" method="_on_mouse_exited"]
[connection signal="pressed" from="button_toggle_side_panel" to="button_toggle_side_panel" method="_on_pressed"]
